took off sango project for now and edited resume higher up the page. added link to keeb project. fixed navbar spacing and fixed spacing for home section for mobile compatibility.

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -80,4 +80,11 @@
         overflow: hidden;
     }
 
+    .name-container {
+        padding: 20px;
+    }
+
+    .introduction {
+        padding: 20px;
+    }
 }
